[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Hero/character_maleAdventurer_sheetHD2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/MainCharacters/Hero.gd" type="Script" id=2]
[ext_resource path="res://Resources/Graphics/Other/UI/e_key.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 1024, 192, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1344, 1024, 192, 256 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "land",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walking",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 29, 79 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 29, 1 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 59, 96 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 31, 81 )

[node name="Hero" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -128 )
frames = SubResource( 13 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -79 )
shape = SubResource( 14 )

[node name="LandTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FloorDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
modulate = Color( 0.121569, 0.0431373, 0.815686, 1 )
shape = SubResource( 15 )

[node name="InteractionDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionDetector"]
modulate = Color( 0.294118, 0.843137, 0.235294, 1 )
position = Vector2( 0, -95 )
shape = SubResource( 16 )

[node name="CollectibleDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleDetector"]
modulate = Color( 0.423529, 0.00392157, 0.709804, 1 )
position = Vector2( 0, -79 )
shape = SubResource( 17 )

[node name="InteractSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 100, -100 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[connection signal="timeout" from="LandTimer" to="." method="_on_LandTimer_timeout"]
[connection signal="body_entered" from="FloorDetector" to="." method="_on_FloorDetector_body_entered"]
[connection signal="body_exited" from="FloorDetector" to="." method="_on_FloorDetector_body_exited"]
[connection signal="area_entered" from="InteractionDetector" to="." method="_on_InteractionDetector_area_entered"]
[connection signal="area_exited" from="InteractionDetector" to="." method="_on_InteractionDetector_area_exited"]
[connection signal="body_entered" from="InteractionDetector" to="." method="_on_InteractionDetector_area_entered"]
[connection signal="body_exited" from="InteractionDetector" to="." method="_on_InteractionDetector_area_exited"]
[connection signal="area_entered" from="CollectibleDetector" to="." method="_on_CollectibleDetector_area_entered"]
[connection signal="area_exited" from="CollectibleDetector" to="." method="_on_CollectibleDetector_area_exited"]
